--- a/style.css
+++ b/style.css
@@ -1,4 +1,19 @@
 body {
     background-color:black ;
     color:goldenrod;
+
+    font-family: "Dancing Script", cursive;
 } 
+
+header{
+     font-size: 50px;
+     border: solid 5px rgb(123, 58, 58);
+     margin: 50px;
+}
+
+h1{
+     font-size: 30px;
+}
+p{
+     font-size: 20px;
+}
