--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color:black ;
-    color:goldenrod;
+    color:rgba(251, 224, 156, 0.792);
 
     font-family: "Dancing Script", cursive;
 } 
@@ -8,7 +8,8 @@ body {
 header{
      font-size: 50px;
      border: solid 5px rgb(123, 58, 58);
-     margin: 50px;
+     border-bottom: solid 5px rgb(255, 230, 0);
+     padding: 50px;
 }
 
 h1{
