--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color:black ;
-    color:rgba(251, 224, 156, 0.792);
+    background-color:rgb(254, 245, 114) ;
+    color:rgb(239, 224, 67);
 
     font-family: "Dancing Script", cursive;
 } 
