--- a/style.css
+++ b/style.css
@@ -18,3 +18,13 @@ h1{
 p{
      font-size: 20px;
 }
+section{
+     background-color: rgb(255, 0, 0);
+     display: flex;
+     justify-content: center;
+     
+}
+
+.chamada-texto{
+margin-right: 30px;
+}
