--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ p{
      font-size: 20px;
 }
 section{
-     background-color: rgb(255, 0, 0);
+     background-color: rgb(12, 26, 48);
      display: flex;
      justify-content: center;
      
@@ -27,4 +27,10 @@ section{
 
 .chamada-texto{
 margin-right: 30px;
+}
+
+img{
+    height: 300;
+    width: 200;
+
 }
